[gd_scene load_steps=2 format=3 uid="uid://c6rmb53vngdf7"]

[ext_resource type="Script" path="res://lobby.gd" id="1"]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("1")

[node name="Players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 500.0
offset_bottom = 500.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="Players"]
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="Start" type="Button" parent="Players"]
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"

[node name="List" type="ItemList" parent="Players"]
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="PortForward" type="Label" parent="Players"]
text = "If you want non-LAN clients to connect,
make sure the port 10567 in UDP
is forwarded on your router."

[node name="FindPublicIP" type="LinkButton" parent="Players"]
text = "Find your public IP address"

[node name="Connect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="NameLabel" type="Label" parent="Connect"]
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"

[node name="Name" type="LineEdit" parent="Connect"]
size_flags_horizontal = 2
size_flags_vertical = 2
text = "The Warrior"

[node name="IPLabel" type="Label" parent="Connect"]
size_flags_horizontal = 2
size_flags_vertical = 0
text = "IP:"

[node name="IPAddress" type="LineEdit" parent="Connect"]
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="Host" type="Button" parent="Connect"]
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="Join" type="Button" parent="Connect"]
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="ErrorLabel" type="Label" parent="Connect"]
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="ErrorDialog" type="AcceptDialog" parent="."]

[connection signal="pressed" from="Players/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Players/FindPublicIP" to="." method="_on_find_public_ip_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_join_pressed"]
